Issue #3305787 by Odai Jaber: Fix will-change css property after the images are lazy loaded a shadow appears around it on Safari

--- a/css/theme/varbase-media-blazy-blurry.theme.css
+++ b/css/theme/varbase-media-blazy-blurry.theme.css
@@ -28,6 +28,7 @@
 .blazy.field--type-image .b-lazy,
 .blazy.media-cover-image .b-lazy {
   transition: filter 0.2s, transform 0.2s;
+  will-change: filter, transform;
   transform: scale(1.001);
   opacity: 1;
   filter: blur(2px);
